// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionFiatChange renders negative change with minus sign 1`] = `
<View>
  <View
    style={
      {
        "flex": 1,
      }
    }
    testID="theme-light"
  >
    <View
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FF5F72",
              "fontFamily": "DM Sans",
              "fontSize": 13,
            }
          }
          suppressHighlighting={true}
        >
          -
          3.50%
           (
          $ 35
          )
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PositionFiatChange renders positive change with plus sign 1`] = `
<View>
  <View
    style={
      {
        "flex": 1,
      }
    }
    testID="theme-light"
  >
    <View
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#00B460",
              "fontFamily": "DM Sans",
              "fontSize": 13,
            }
          }
          suppressHighlighting={true}
        >
          +
          5.00%
           (
          $ 50
          )
        </Text>
      </View>
    </View>
  </View>
</View>
`;
